--- a/favorites.html
+++ b/favorites.html
@@ -6,6 +6,7 @@
     <title>Favorites - AptMate</title>
     <link rel="stylesheet" href="navbar/navbar.css">
     <link rel="stylesheet" href="favorites.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="navbar-container"></div>
@@ -19,7 +20,7 @@
     </div>
 
     <script type="module">
-        import { initializeFavorites } from './hearticon.js';
+        import { initializeFavorites, toggleHeart } from './hearticon.js';
         import { fetchApartmentData } from './database.js';
 
         async function displayFavorites() {
@@ -35,6 +36,9 @@
                     const listItem = document.createElement('li');
                     listItem.innerHTML = `
                         <div class="listing" data-id="${id}">
+                            <div class="heart-icon" onclick="event.stopPropagation(); toggleHeart(this);">
+                                <img src="images/heart-icon.svg" alt="Heart Icon">
+                            </div>
                             <h3>${id}</h3>
                             <p>Price: $${apartment.Price}</p>
                             <p>Bedrooms: ${apartment.Bedroom}</p>
@@ -46,9 +50,12 @@
                     favoritesList.appendChild(listItem);
                 }
             });
+
+            initializeFavorites();
         }
 
         window.onload = displayFavorites;
+        window.toggleHeart = toggleHeart;
     </script>
     <script type="module" src="navbar/navbar.js"></script>
 </body>
