Changed the favorites item in the navbar so that it hides the page until a user signs into their account. Also fixed weird bug that made the login button much higher than the other navbar items.

--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -19,7 +19,7 @@
             <li class="navbar__item">
                 <a href="/login.html" class="navbar__links">Login</a>
             </li>
-            <li class="navbar__item">
+            <li class="navbar__item" id="favoritesItem">
                 <a href="/favorites.html" class="navbar__links">Favorites</a>
             </li>
             <li class="navbar__btn" id="registerBtn">
