Fixed Filter Issue and Added Apply Filters Button

--- a/results.html
+++ b/results.html
@@ -20,7 +20,7 @@
         <div id="filterOptions" class="filter-options" style="display: none;">
             <div class="filter-option">
                 <label for="price">Price:</label>
-                <select id="price" onchange="filterResults()">
+                <select id="price">
                     <option value="">Any</option>
                     <option value="1000">Under $1000</option>
                     <option value="2000">$1000 - $2000</option>
@@ -30,7 +30,7 @@
             </div>
             <div class="filter-option">
                 <label for="bedrooms">Bedrooms:</label>
-                <select id="bedrooms" onchange="filterResults()">
+                <select id="bedrooms">
                     <option value="">Any</option>
                     <option value="1">1 Bedroom</option>
                     <option value="2">2 Bedrooms</option>
@@ -40,7 +40,7 @@
             </div>
             <div class="filter-option">
                 <label for="bathrooms">Bathrooms:</label>
-                <select id="bathrooms" onchange="filterResults()">
+                <select id="bathrooms">
                     <option value="">Any</option>
                     <option value="1">1 Bathroom</option>
                     <option value="2">2 Bathrooms</option>
@@ -86,7 +86,8 @@
                     <input type="checkbox" id="washerDryerHookups" name="amenities" value="Washer/Dryer Hookups">
                     <label for="washerDryerHookups">Washer/Dryer Hookups</label>
                 </div>
-            </div>            
+            </div>
+            <button id="applyFilterBtn">Apply Filters</button> <!-- New button to apply filters -->
         </div>
         <ul id="apartmentList">
         </ul>
@@ -116,9 +117,7 @@
                 let filteredApartments = Object.keys(apartments).map(key => ({ id: key, ...apartments[key] }));
 
                 if (zipcode) {
-
                     filteredApartments = filteredApartments.filter(apartment => apartment.ZipCode === zipcode.trim());
-
                 }
 
                 if (filteredApartments.length > 0) {
