Added website field on the submission form and hyperlinked it to the data inside.

--- a/apartment-details.html
+++ b/apartment-details.html
@@ -76,6 +76,7 @@
                     <div class="detail-item"><span class="detail-label">Bathrooms:</span> ${apartmentDetails.Bathroom}</div>
                     <div class="detail-item"><span class="detail-label">Zip Code:</span> ${apartmentDetails.ZipCode}</div>
                     <div class="detail-item"><span class="detail-label">Amenities:</span> ${amenities}</div>
+                    <div class="detail-item"><span class="detail-label">Website:</span> <a href="${apartmentDetails.Website}" target="_blank">Visit Site</a></div>
                 `;
             } else {
                 console.log('No apartment details found.');
